# raptorx-zy

./: README  README~  __note__.txt  __note__.txt~  release.sh  release.sh~  setup.sh  setup.sh~
MatrixLib/: CMakeLists.template  CMakeLists.txt  Doxyfile.in  README  main.cpp  matrix.cpp  matrix.h  matrix3.h  matrix_test.cpp  test3.cpp  zy_string.cpp
MatrixLib/cmake/: FindHDF5.cmake~
bioh5/: CMakeLists.template  CMakeLists.txt  README  bioh5.cpp  bioh5.h  bioh5test.cpp  compute_mi_moreev.cpp  fasta2hdf5  fasta2hdf5.cpp  getProteinFeature  getProteinFeature.cpp  pdb2h5.cpp  protein.cpp  protein.h
bioh5/cmake/: FindHDF5.cmake  FindHDF5.cmake~  FindMatrixLight.cmake
bioh5/cmake/.svn/: all-wcprops  entries
contrib/BALL/doc/misc/: coding_style.tex
contrib/BALL/doc/tools/: makedoc
contrib/BALL/include/BALL/: BALL.doc  concept.h  datatype.h  energy.h  format.h  kernel.h  maths.h  molmec.h  nmr.h  solvation.h  structure.h  system.h
contrib/BALL/source/: Makefile  aclocal.m4  common.mak  conf.diag.tar  config.mak  config.status  configure  configure.ac  libBALL.objects  rules.mak  startBALLView  targets.mak
contrib/BALL/source/APPLICATIONS/: Makefile
contrib/BALL/source/BENCHMARKS/: .Dependencies  AmberFF_bench.C  CharmmFF_bench.C  CompositeClone_bench.C  CompositeCreation_bench.C  ContourSurface_bench.C  DataStructures_bench.C  FragmentDB_bench.C  KernelClone_bench.C  KernelCreation_bench.C  KernelIteration_bench.C  MolmecSupport_bench.C  PDB_bench.C  PoissonBoltzmann_bench.C  Skeleton_bench.C
contrib/BALL/source/COMMON/: .Dependencies  exception.C  logStream.C  logStream.C~
contrib/BALL/source/CONCEPT/: .Dependencies  Makefile  XDRPersistenceManager.C  autoDeletable.C  client.C  composite.C  embeddable.C  enumerator.C  factory.C  molecularInformation.C  moleculeObjectCreator.C  notification.C  object.C  objectCreator.C  persistenceManager.C  property.C  selectable.C  textPersistenceManager.C  timeStamp.C
contrib/BALL/source/DATATYPE/: .Dependencies  bitVector.C  contourSurface.C  options.C  regularData1D.C  regularData2D.C  regularData3D.C  regularExpression.C
contrib/BALL/source/ENERGY/: .Dependencies  atomicContactEnergy.C  composedEnergyProcessor.C  coulomb.C  distanceCoulomb.C  energyProcessor.C
contrib/BALL/source/EXAMPLES/: .Dependencies  Makefile  PDB2discover.C  PDBChecker.C  SASAreas.C  addHydrogens.C  amberEnergy.C  bindingEnergy.C  proteinMapper.C  ramachandran.C
contrib/BALL/source/FORMAT/: .Dependencies  DBInterface.C  DCDFile.C  DSN6File.C  GAMESSDatFile.C  GAMESSDatParserLexer.C  GAMESSDatParserParser.C  GAMESSDatParserParser.h  GAMESSLogFile.C  GAMESSLogParserParser.C  GAMESSLogParserParser.h  HINFile.C  INIFile.C  JCAMPFile.C  KCFFile.C  MOL2File.C  MOLFile.C  Makefile  NMRStarFile.C  PDBFileDetails.C  PDBInfo.C  (+15 more)
contrib/cplex/: README.html
contrib/cplex/cplex/: readmeUNIX.html
contrib/cplex/cpoptimizer/: readmeUNIX.html
contrib/cplex/licenses/: LA_pl  LI_cs  LI_de  LI_el  LI_en  LI_en.txt  LI_es  LI_fr  LI_in  LI_it  LI_ja  LI_ko  LI_lt  LI_pl  LI_pt  LI_ru  LI_sl  LI_tr  LI_zh  LI_zh_TW  notices  notices.txt
contrib/hdf5/: README
contrib/hdf5/include/: H5pubconf.h  h5_dble_interface.mod  h5a.mod  h5a_provisional.mod  h5d.mod  h5d_provisional.mod  h5ds.mod  h5e.mod  h5e_provisional.mod  h5f.mod  h5fortran_types.mod  h5g.mod  h5global.mod  h5i.mod  h5im.mod  h5l.mod  h5l_provisional.mod  h5lib.mod  h5lib_provisional.mod  h5lt.mod  h5o.mod  h5o_provisional.mod  h5p.mod  h5p_provisional.mod  h5r.mod  h5r_provisional.mod  h5s.mod  h5t.mod  h5t_provisional.mod  h5tb.mod  h5z.mod  hdf5.mod
contrib/hdf5/lib/: libhdf5.la  libhdf5.settings  libhdf5.so.7.0.4  libhdf5_cpp.la  libhdf5_cpp.so.7  libhdf5_cpp.so.7.0.4  libhdf5_fortran.la  libhdf5_fortran.so.7.0.4  libhdf5_hl.la  libhdf5_hl.so.7.0.4  libhdf5_hl_cpp.la  libhdf5_hl_cpp.so.7.0.4  libhdf5hl_fortran.la  libhdf5hl_fortran.so.7.0.4
contrib/ibdir}/pkgconfig/: blas.pc  lapack.pc
epmi/: README.md  README.md~  setup.sh
epmi/data/: model-100-40-r0.1-withss-pre-120
epmi/test/: .stderr  .stdout  1b4bA.a3m  1b4bA.epad.prob  1b4bA.fasta  1b4bA.h5list  1b4bA.seq  1b4bA.tgt  1b72A.a3m  1b72A.fasta  1b72A.tgt  1bq9A.a3m  1bq9A.fasta  1bq9A.tgt  1cewI.a3m  1cewI.fasta  1cewI.tgt  1cqkA.a3m  1cqkA.fasta  1cqkA.tgt  runbat.test.sh  runbat.test.sh~  test.list
epmi/test/verify/: 1b4bA.pnn1
feature_util/: CMakeLists.template  CMakeLists.txt  add_pair_feature_to_bioh5.cpp  fasta2hdf5.cpp  protein_const.h
feature_util/cmake/: FindBALL.cmake  FindLapack.cmake
feature_util/cmake/.svn/: all-wcprops  entries
feature_util/cmake/.svn/text-base/: FindBioh5.cmake.svn-base
pdbtools/: BetaPairScore.pm  BioAlign.pm  BioCluster.pm  BioDSSP.pm  BioProtein.pm  BioProteinSSTopo.pm  BioRNA.pm  BioRSR.pm  Derivative.pm  Spline.pm  getPDB.sh  getPDBlist.sh  pdb_seq.sh  pdb_seq_chain_nt.sh  pdb_seq_idx.sh
pdbtools/Math/: MatrixReal.pm
pnn1v2/: #README#  CMakeLists.template  CMakeLists.txt  Nnpf.cpp  PNN1Inference.cpp  PNN1Inference.h  PNN1test.cpp  README  Score.h  ScoreMatrix.cpp  ScoreMatrix.h  Sequence.cpp  Sequence.nompi.cpp  make_nompi.sh  make_split_file.pl  nnpfpredict.cpp  nnpftrain.cpp  optimizer.cpp  optimizer.h  optimizer.nompi.cpp  pnn1.h  pnn1.nompi.cpp  pnnload.cpp  pnnload_new.cpp  test_inv.cpp  testnav.cpp
pnn1v2/cmake/: FindGSL.cmake  FindMPI.cmake
pnn1v2/cmake/.svn/: all-wcprops  entries
rnatreefolder/: readme
rnatreefolder/conf/: allchi.data.lib  anglecpc.lib  anglepcp.lib  bbfrag.lib  bondcp.lib  crfs.conf  crfs.conf~  known_transition_r2.lib  resfrag.lib  ribose.lib
rnatreefolder/conf/.svn/: all-wcprops  entries
rnatreefolder/src/: Makefile  Makefile~  RNAbuilder.cpp  RNAbuilder.h  RNAbuilder.h~  crfsample.joint  crfsample.joint.cpp  crfsample.joint.cpp~  rmsdp.cpp  rmsdp.h  rnageo.h  rs.h  stdlinear.cpp
rnatreefolder/src/.svn/: all-wcprops  entries
rnatreefolder/src/ann_1.1.1/: Make-config  Make-config~  Makefile
rnatreefolder/src/contrafold/: post.out
rnatreefolder/test/: 157d.f54  157d.pss  157d.seq  157d.ss
rnatreefolder/test/.svn/: all-wcprops  entries
(+2087 files in other folders)
